--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   <body>
     <!-- heaader section code -->
     <header class="pt-4">
-        <nav class="navbar navbar-expand-lg bg-white">
+        <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm bg-white">
             <div class="container">
               <a class="navbar-brand" href="#">e<span class="text-danger">Learning</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
               <div class="collapse navbar-collapse text-dark " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -21,14 +24,15 @@
                     <a class="nav-link" href="#">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Courses</a>
+                    <a class="nav-link" href="#">Courses</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Live</a>
+                    <a class="nav-link" href="#">Live</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Log in</a>
+                    <a class="nav-link" href="#">Log in</a>
                   </li>
+                  
                 </ul>
                 <form class="d-flex" role="search">
                   <button class="btn btn-outline-danger " type="submit">Sign Up</button>
@@ -37,6 +41,53 @@
             </div>
           </nav>
     </header>
+
+    <!-- banner section code  -->
+    <section class="container py-5">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/cover/cover-1.png" class="d-block w-100 card-img" alt="...">
+                <div class="card-img-overlay ">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1 class="text-danger">Strat Your eLearnign</h1>
+                      <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
+                      <a class="btn btn-info" href="">Get Start</a>
+                      </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="text-danger">Strat Your eLearnign</h1>
+                  <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
+                  <a class="btn btn-info" href="">Get Start</a>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="text-danger">Strat Your eLearnign</h1>
+                  <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
+                  <a class="btn btn-info" href="">Get Start</a>
+                  </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
