--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- icone link  -->
+    <script src="https://kit.fontawesome.com/bd03640da8.js" crossorigin="anonymous"></script>
     <title>eLearning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
@@ -62,7 +64,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                <img src="images/cover/cover-3.jpg" class="d-block w-100 rounded" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="text-danger">Strat Your eLearnign</h1>
                   <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
@@ -87,6 +89,20 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+    </section>
+    <!-- footer section code  -->
+    <section class="">
+
+        <div class="bg-dark text-center p-5">
+            <h2 class="text-white">e<span class="text-danger">Learning</span></h2>
+            <P class="text-white">Office 71, New way, Chattogram;Banglades. Privecy | Term & Condition</P>
+            <div class="">
+                <a class="text-light me-3 h3" href=""><i class="fa-brands fa-square-facebook"></i></a>
+                <a class="text-light me-3 h3" href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a class="text-light h3" href=""> <i class="fa-brands fa-telegram"></i></a>
+            </div>
+        </div>
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
