--- a/index.html
+++ b/index.html
@@ -91,6 +91,110 @@
           </div>
     </section>
 
+    <!-- courses section code  -->
+    <section class="container">
+        <div class=" text-center">
+            <h2 class="my-2">Discover Our Popular <br> Courses</h2>
+            <p class="text-wrap">A well-known truth that a reader will be diverted from a page's readable content when examining its layout.</p>
+        </div>
+        <div class="my-5">
+            <div class="courses d-flex">
+                <div class="card mb-3 me-2" style="max-width: 540px;">
+                      <div class="row g-0">
+                        <div class="col-md-4">
+                          <img src="images/course/course-1.png" class="img-fluid rounded-start h-100" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                            <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
+                           <h6 class="text-danger">Price : $20</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                <div class="card mb-3 ms-2" style="max-width: 540px;">
+                      <div class="row g-0">
+                        <div class="col-md-4">
+                          <img src="images/course/course-2.png" class="img-fluid rounded-start h-100" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Javascript Basic to advanced</h5>
+                            <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
+                           <h6 class="text-danger">Price : $20</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>          
+          </div>
+            <div class="courses d-flex">
+                <div class="card mb-3 me-2" style="max-width: 540px;">
+                      <div class="row g-0">
+                        <div class="col-md-4">
+                          <img src="images/course/course-3.png" class="img-fluid rounded-start h-100" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Fullstack Web Development</h5>
+                            <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
+                           <h6 class="text-danger">Price : $20</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                <div class="card mb-3 ms-2" style="max-width: 540px;">
+                      <div class="row g-0">
+                        <div class="col-md-4">
+                          <img src="images/course/course-4.png" class="img-fluid rounded-start h-100" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Digital Marketing</h5>
+                            <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
+                           <h6 class="text-danger">Price : $20</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>          
+          </div>
+            <div class="courses d-flex">
+                <div class="card mb-3 me-2" style="max-width: 540px;">
+                      <div class="row g-0">
+                        <div class="col-md-4">
+                          <img src="images/course/course-5.png" class="img-fluid rounded-start h-100" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Photography Basic Rules</h5>
+                            <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
+                           <h6 class="text-danger">Price : $20</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                <div class="card mb-3 ms-2" style="max-width: 540px;">
+                      <div class="row g-0">
+                        <div class="col-md-4">
+                          <img src="images/course/course-6.png" class="img-fluid rounded-start h-100" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">
+                                Motion Graphics</h5>
+                            <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
+                           <h6 class="text-danger">Price : $20</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>          
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <a class="btn btn-info" href="">See More Courses</a>
+        </div>
+    </section>
+
     <!-- Frequently asked question -->
     <section class="container py-5">
         <div class="text-center py-5">
