--- a/index.html
+++ b/index.html
@@ -195,6 +195,24 @@
         </div>
     </section>
 
+    <!-- elearning exploreation section code  -->
+    <section class="container my-5">
+       <div class="row">
+        <div class="col-lg-6">
+            <img src="images/working.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-6 d-flex justify-content-center align-item-center flex-column p-5 " style="background-color:#E7F6F2 ;">
+            <h4 class="h1 mb-3">Explore The elearning
+                Institute</h4>
+            <p class="mb-4">The term business refers to an organization or enterprising entity engaged in commercial, industrial, or professional activities. The purpose of a business is to organize some sort of economic production (of goods or services). Businesses can be for-profit entities or non-profit organizations fulfilling a charitable mission or furthering a social cause. Businesses range in scale and scope from sole proprietorships to large, international corporations.</p>
+            <a class="btn btn-danger w-50" href="">Read More</a>
+
+        </div>
+
+       </div>
+
+    </section>
+
     <!-- Frequently asked question -->
     <section class="container py-5">
         <div class="text-center py-5">
