--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <script src="https://kit.fontawesome.com/bd03640da8.js" crossorigin="anonymous"></script>
     <title>eLearning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- custom CSS link  -->
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
     <!-- heaader section code -->
     <header class="pt-4">
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm bg-white">
             <div class="container">
-              <a class="navbar-brand" href="#">e<span class="text-danger">Learning</span></a>
+              <a class="navbar-brand" href="#">e<span class="text-danger h2">Learning</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -54,29 +56,35 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/cover/cover-1.png" class="d-block w-100 card-img" alt="...">
+                <img src="images/cover/cover-1.png" class="slider_img d-block w-100 card-img" alt="...">
                 <div class="card-img-overlay ">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1 class="text-danger">Strat Your eLearnign</h1>
+                      <div class="banner_title">
+                      <h1 class="text-light">Strat Your eLearnign</h1>
                       <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
-                      <a class="btn btn-info" href="">Get Start</a>
+                      <a class="btn btn-danger" href="">Get Start</a>
                       </div>
+                    </div>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/cover/cover-3.jpg" class="d-block w-100 rounded" alt="...">
+                <img src="images/cover/cover-3.jpg" class="slider_img d-block w-100 rounded" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 class="text-danger">Strat Your eLearnign</h1>
-                  <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
-                  <a class="btn btn-info" href="">Get Start</a>
+                  <div class="banner_title">
+                    <h1 class="text-light">Strat Your eLearnign</h1>
+                    <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
+                    <a class="btn btn-danger" href="">Get Start</a>
+                    </div>
                   </div>
               </div>
               <div class="carousel-item">
-                <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                <img src="images/cover/cover-1.png" class="slider_img d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 class="text-danger">Strat Your eLearnign</h1>
-                  <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
-                  <a class="btn btn-info" href="">Get Start</a>
+                   <div class="banner_title">
+                    <h1 class="text-light">Strat Your eLearnign</h1>
+                    <p class="text-light">Take a step that you need before. elearning with you, let's explore it</p>
+                    <a class="btn btn-danger" href="">Get Start</a>
+                   </div>
                   </div>
               </div>
             </div>
@@ -198,7 +206,7 @@
     <!-- elearning exploreation section code  -->
     <section class="container my-5">
        <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 pe-0">
             <img src="images/working.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 d-flex justify-content-center align-item-center flex-column p-5 " style="background-color:#E7F6F2 ;">
