--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p class="text-wrap">A well-known truth that a reader will be diverted from a page's readable content when examining its layout.</p>
         </div>
         <div class="my-5">
-            <div class="courses d-flex">
+            <div class="courses d-flex justify-content-evenly">
                 <div class="card mb-3 me-2" style="max-width: 540px;">
                       <div class="row g-0">
                         <div class="col-md-4">
