--- a/index.html
+++ b/index.html
@@ -221,6 +221,20 @@
 
     </section>
 
+    <!-- Register section code  -->
+    <section class="container bg-info p-5 rounded">
+      <div class="row">
+        <div class="col-md-9">
+          <h3>Ready to join?</h3>
+          <p class="w-75">Luckily, there’s a treasure trove of learning quotes out there. And to save you the effort, we’ve cherry-picked the very best for your delectation.</p>
+        </div>
+        <div class="col-md-3 text-center pt-5">
+          <a class="btn btn-light text-info" href="">Register Now</a>
+        </div>
+      </div>
+
+    </section>
+
     <!-- Frequently asked question -->
     <section class="container py-5">
         <div class="text-center py-5">
@@ -283,6 +297,21 @@
                 </div>
               </div>
         </div>
+    </section>
+    <!-- Companies section code  -->
+    <section class="container py-5">
+      <div class="text-center pb-5">
+        <h2>Trusted by over 800+ companies</h2>
+      </div>
+      <div class="d-flex justify-content-between me-2">
+        <img class="com" src="images/company/company-1.png" alt="">
+        <img class="com" src="images/company/company-2.png" alt="">
+        <img class="com" src="images/company/company-3.png" alt="">
+        <img class="com" src="images/company/company-4.png" alt="">
+        <img class="com" src="images/company/company-5.png" alt="">
+        <img class="com" src="images/company/company-6.png" alt="">
+      </div>
+
     </section>
     <!-- footer section code  -->
     <section class="">
