--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                       </div>
                     </div>          
           </div>
-            <div class="courses d-flex">
+        <div class="my-5">
+            <div class="courses d-flex justify-content-evenly">
                 <div class="card mb-3 me-2" style="max-width: 540px;">
                       <div class="row g-0">
                         <div class="col-md-4">
@@ -144,7 +145,7 @@
                         </div>
                         <div class="col-md-8">
                           <div class="card-body">
-                            <h5 class="card-title">Fullstack Web Development</h5>
+                            <h5 class="card-title">Fundamental Of UI/UX Design</h5>
                             <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
                            <h6 class="text-danger">Price : $20</h6>
                           </div>
@@ -158,7 +159,7 @@
                         </div>
                         <div class="col-md-8">
                           <div class="card-body">
-                            <h5 class="card-title">Digital Marketing</h5>
+                            <h5 class="card-title">Javascript Basic to advanced</h5>
                             <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
                            <h6 class="text-danger">Price : $20</h6>
                           </div>
@@ -166,7 +167,8 @@
                       </div>
                     </div>          
           </div>
-            <div class="courses d-flex">
+        <div class="my-5">
+            <div class="courses d-flex justify-content-evenly">
                 <div class="card mb-3 me-2" style="max-width: 540px;">
                       <div class="row g-0">
                         <div class="col-md-4">
@@ -174,7 +176,7 @@
                         </div>
                         <div class="col-md-8">
                           <div class="card-body">
-                            <h5 class="card-title">Photography Basic Rules</h5>
+                            <h5 class="card-title">Fundamental Of UI/UX Design</h5>
                             <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
                            <h6 class="text-danger">Price : $20</h6>
                           </div>
@@ -188,8 +190,7 @@
                         </div>
                         <div class="col-md-8">
                           <div class="card-body">
-                            <h5 class="card-title">
-                                Motion Graphics</h5>
+                            <h5 class="card-title">Javascript Basic to advanced</h5>
                             <p class="card-text text-secondary">Learn about user experience and user interface design principles such as heuristic rules and best practices.</p>
                            <h6 class="text-danger">Price : $20</h6>
                           </div>
@@ -197,7 +198,7 @@
                       </div>
                     </div>          
           </div>
-        </div>
+
         <div class="d-flex justify-content-center">
             <a class="btn btn-info" href="">See More Courses</a>
         </div>
