--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <!-- elearning exploreation section code  -->
     <section class="container my-5">
        <div class="row">
-        <div class="col-lg-6 pe-0">
+        <div class="col-lg-6">
             <img src="images/working.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 d-flex justify-content-center align-item-center flex-column p-5 " style="background-color:#E7F6F2 ;">
