--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
             <h2 class="my-2">Discover Our Popular <br> Courses</h2>
             <p class="text-wrap">A well-known truth that a reader will be diverted from a page's readable content when examining its layout.</p>
         </div>
-        <div class="my-5">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="my-5">
             <div class="courses d-flex justify-content-evenly">
                 <div class="card mb-3 me-2" style="max-width: 540px;">
                       <div class="row g-0">
@@ -198,6 +200,9 @@
                       </div>
                     </div>          
           </div>
+          </div>
+
+        </div>
 
         <div class="d-flex justify-content-center">
             <a class="btn btn-info" href="">See More Courses</a>
@@ -207,7 +212,7 @@
     <!-- elearning exploreation section code  -->
     <section class="container my-5">
        <div class="row">
-        <div class="col-lg-6 pe-0">
+        <div class="col-lg-6 p-0">
             <img src="images/working.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 d-flex justify-content-center align-item-center flex-column p-5 " style="background-color:#E7F6F2 ;">
