--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </section>
 
     <!-- elearning exploreation section code  -->
-    <section class="container my-5">
+    <section class="container my-5" style="background-color:#E7F6F2 ;">
        <div class="row">
         <div class="col-lg-6 p-0">
             <img src="images/working.png" class="img-fluid" alt="">
