--- a/index.html
+++ b/index.html
@@ -227,6 +227,28 @@
 
     </section>
 
+    <!-- modal create  -->
+
+
+<!-- Modal code add -->
+<div class="modal fade" id="register" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Hey! Welcome to eLearning</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        The more that you read, the more things you will know.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     <!-- Register section code  -->
     <section class="container bg-info p-5 rounded">
       <div class="row">
@@ -235,7 +257,7 @@
           <p class="w-75">Luckily, there’s a treasure trove of learning quotes out there. And to save you the effort, we’ve cherry-picked the very best for your delectation.</p>
         </div>
         <div class="col-md-3 text-center pt-5">
-          <a class="btn btn-light text-info" href="">Register Now</a>
+          <a class="btn btn-light text-info" data-bs-toggle="modal" data-bs-target="#register" href="">Register Now</a>
         </div>
       </div>
 
@@ -308,14 +330,16 @@
     <section class="container py-5">
       <div class="text-center pb-5">
         <h2>Trusted by over 800+ companies</h2>
-      </div>
-      <div class="d-flex justify-content-between me-2">
-        <img class="com" src="images/company/company-1.png" alt="">
-        <img class="com" src="images/company/company-2.png" alt="">
-        <img class="com" src="images/company/company-3.png" alt="">
-        <img class="com" src="images/company/company-4.png" alt="">
-        <img class="com" src="images/company/company-5.png" alt="">
-        <img class="com" src="images/company/company-6.png" alt="">
+      </div class="row">
+      <div class="">
+        <div class="d-flex justify-content-between me-2">
+          <img class="com col-md-2 col-sm-3" src="images/company/company-1.png" alt="">
+          <img class="com col-md-2 col-sm-3" src="images/company/company-2.png" alt="">
+          <img class="com col-md-2 col-sm-3" src="images/company/company-3.png" alt="">
+          <img class="com col-md-2 col-sm-3" src="images/company/company-4.png" alt="">
+          <img class="com col-md-2 col-sm-3" src="images/company/company-5.png" alt="">
+          <img class="com col-md-2 col-sm-3" src="images/company/company-6.png" alt="">
+        </div>
       </div>
 
     </section>
